--- a/website/app/index.html
+++ b/website/app/index.html
@@ -218,7 +218,6 @@
 <script src="application/core/projects/project/processes/template-instance-controller.js"></script>
 <script src="application/core/projects/project/processes/setup-instance-controller.js"></script>
 <script src="application/core/projects/project/processes/measurement-controller.js"></script>
-<script src="application/core/projects/project/processes/template-service.js"></script>
 <script src="application/core/projects/project/project-size-filter.js"></script>
 <script src="application/core/projects/project/project-file-count-filter.js"></script>
 <script src="application/core/projects/project/help/userguide.js"></script>
@@ -325,6 +324,9 @@
 <script src="application/processes/processes.js"></script>
 <script src="application/processes/process-templates.service.js"></script>
 <script src="application/processes/validators.js"></script>
+<script src="application/processes/measurements.js"></script>
+<script src="application/processes/measurements.service.js"></script>
+<script src="application/core/components/properties/properties.js"></script>
 <!-- endbuild -->
 </body>
 </html>
