--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -13,29 +13,29 @@
             <div class="col-xs-4">
                 <div class="details-sidebar">
                     <ul class="list-group">
-                        <li ng-class="{'active': measurement === selected.item}" ng-click="showDetails(measurement)"
-                            ng-repeat="measurement in measurements | filter:search"
+                        <li ng-class="{'active': template === currentMeasurement}" ng-click="showDetails(template)"
+                            ng-repeat="template in templates | filter:search"
                             class="list-group-item pointer">
-                            <div>{{measurement.name}}</div>
+                            <div>{{template.name}}</div>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-xs-8 details-main-content">
                 <div ng-if="enterValue === false">
-                    <div class="row pull-right">
-                        <button class="btn btn-primary" ng-click="editMeasurement(measurement)">Enter {{measurement.name}}
+                    <b>Details: </b> <br><br>
+                    Category : {{currentMeasurement.category}} <br>
+
+                    <div class="row">
+                        <button class="btn btn-primary" ng-click="editMeasurement(currentMeasurement)">Enter
+                            {{measurement.name}}
                         </button>
                     </div>
-                    <b>{{measurement.name}}</b> Details here...
                 </div>
                 <div ng-if="enterValue===true">
-                    <div class="row" ng-repeat="choice in choices">
-                        <div class="col-xs-3">
-                            <b>{{measure.name}}:</b>
-                        </div>
-                        <div class="col-xs-5">
-                            <input class="form-control" ng-model="choice.value" placeholder="Value...">
+                    <div class="row" ng-repeat="property in currentMeasurement.properties">
+                        <div class="col-xs-8">
+                            <display-property property="property"></display-property>
                         </div>
                         <div class="col-xs-1">
                             <i ng-click="addNewChoice()" style="color:#3a9ee3" class="fa fa-plus fa-fw"></i>
@@ -43,6 +43,18 @@
                         <div class="col-xs-1">
                             <i ng-click="removeChoice($index)" style="color:#e57373" class="fa fa-minus fa-fw"></i>
                         </div>
+                        <!--<div class="col-xs-3">-->
+                        <!--<b>{{measurement.name}}:</b>-->
+                        <!--</div>-->
+                        <!--<div class="col-xs-5">-->
+                        <!--<input class="form-control" ng-model="choice.value" placeholder="Value...">-->
+                        <!--</div>-->
+                        <!--<div class="col-xs-1">-->
+                        <!--<i ng-click="addNewChoice()" style="color:#3a9ee3" class="fa fa-plus fa-fw"></i>-->
+                        <!--</div>-->
+                        <!--<div class="col-xs-1">-->
+                        <!--<i ng-click="removeChoice($index)" style="color:#e57373" class="fa fa-minus fa-fw"></i>-->
+                        <!--</div>-->
                     </div>
 
                     <div class="row">
