--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -43,27 +43,45 @@
                     <div class="col-xs-8">
                         <b>Samples</b>
 
-                        <div class="row" ng-repeat="attachment in template.samples">
+                        <div class="row" ng-repeat="sample in template.input_samples">
                             <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                             <img src="assets/img/splash/sample_icon.png"
                                  style="height: 40px;padding-bottom: 10px;">
-                            <a ng-click="openDetails(attachment)" class="link pointer"
-                               style="padding-left: 15px;">{{attachment.name}}</a>
+                            <a ng-click="openDetails(sample)" class="link pointer"
+                               style="padding-left: 15px;">{{sample.name}}</a>
 
                             <div class="row">
                                 <div class="col-xs-offset-2">
                                     <ul>
-                                        <li ng-repeat="measure in attachment.measurements">
-                                            <div ng-switch="measure._type">
+                                        <li ng-repeat="property in sample.new_properties">
+                                            <div ng-switch="property._type">
                                                 <div ng-switch-when="number">
-                                                    {{measure.name}}: <span style="padding-left: 20px;"> {{measure.value}} {{measure.unit}}</span>
+                                                    {{property.name}}: <span style="padding-left: 20px;"> {{property.value}} {{property.unit}}</span>
                                                 </div>
                                                 <div ng-switch-when="string">
-                                                    {{measure.name}}: <span style="padding-left: 20px;"> {{measure.value}}</span>
+                                                    {{property.name}}: <span style="padding-left: 20px;"> {{property.value}}</span>
                                                 </div>
                                                 <div ng-switch-when="histogram">
                                                     <a href="" popover="Graph displayed here...."
-                                                       popover-title="Particle size distribution">{{measure.name}} <i
+                                                       popover-title="Particle size distribution">{{property.name}} <i
+                                                            class="fa fa-bar-chart"></i>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <ul>
+                                        <li ng-repeat="property in sample.properties">
+                                            <div ng-switch="property._type">
+                                                <div ng-switch-when="number">
+                                                    {{property.name}}: <span style="padding-left: 20px;"> {{property.value}} {{property.unit}}</span>
+                                                </div>
+                                                <div ng-switch-when="string">
+                                                    {{property.name}}: <span style="padding-left: 20px;"> {{property.value}}</span>
+                                                </div>
+                                                <div ng-switch-when="histogram">
+                                                    <a href="" popover="Graph displayed here...."
+                                                       popover-title="Particle size distribution">{{property.name}} <i
                                                             class="fa fa-bar-chart"></i>
                                                     </a>
                                                 </div>
@@ -169,7 +187,7 @@
                             </button>
                             <br><br>
 
-                            <div class="row" ng-repeat="attachment in template.samples">
+                            <div class="row" ng-repeat="attachment in template.input_samples">
                                 <div ng-if="attachment.type === 'sample'" class="col-xs-12">
                                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                     <img src="assets/img/splash/sample_icon.png"
