--- a/website/app/index.html
+++ b/website/app/index.html
@@ -327,6 +327,7 @@
 <script src="application/processes/measurements.js"></script>
 <script src="application/processes/measurements.service.js"></script>
 <script src="application/core/components/properties/properties.js"></script>
+<script src="application/filters/emptymeasure-filter.js"></script>
 <!-- endbuild -->
 </body>
 </html>
