--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -32,7 +32,7 @@
                     <div class="col-xs-12">
                         <b>Set Up</b>
                         <ul>
-                            <li ng-repeat="setting in template.settings">
+                            <li ng-repeat="setting in template.setup.settings[0].properties">
                                 <i>{{setting.property.name}}</i> :: {{setting.property.value}} {{setting.property.unit}}
                             </li>
                         </ul>
