--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -3,7 +3,8 @@
         <div class="col-xs-4">
             <div class="details-sidebar">
                 <div class="row">
-                    <div class="col-xs-8" style="margin-top: 10px;">
+                    <div class="col-xs-12" style="margin-top: 10px;">
+                        <div class="pull-right"><a ui-sref="projects.project.processes.list"> <i class="fa fa-fw fa-backward"></i> Back to processes list</a></div>
                         <h4 class="text-center process">{{template.name}}</h4>
                     </div>
                 </div>
@@ -52,16 +53,17 @@
 
                             <div class="row">
                                 <div class="col-xs-offset-2">
+                                    <b>Measurements:</b>
                                     <ul>
                                         <li ng-repeat="property in sample.new_properties">
                                             {{property.name}}
                                             <div ng-repeat="measure in property.measures">
-                                                <div ng-switch="property._type">
+                                                <div ng-switch="measure._type">
                                                     <div ng-switch-when="number">
-                                                        <span style="padding-left: 20px;"> {{measure.value}} {{measure.unit}}</span>
+                                                        <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
                                                     </div>
                                                     <div ng-switch-when="string">
-                                                       <span style="padding-left: 20px;"> {{measure.value}}</span>
+                                                       <span style="padding-left: 30px;"> {{measure.value}}</span>
                                                     </div>
                                                     <div ng-switch-when="histogram">
                                                         <a href="" popover="Graph displayed here...."
@@ -71,6 +73,36 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </li>
+                                    </ul>
+                                    <ul>
+                                        <li ng-repeat="property in sample.properties">
+                                            {{property.name}}
+                                            <div ng-repeat="measure in property.measures">
+                                                <div ng-switch="measure._type">
+                                                    <div ng-switch-when="number">
+                                                        <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
+                                                    </div>
+                                                    <div ng-switch-when="string">
+                                                        <span style="padding-left: 30px;"> {{measure.value}}</span>
+                                                    </div>
+                                                    <div ng-switch-when="histogram">
+                                                        <a href="" popover="Graph displayed here...."
+                                                           popover-title="Particle size distribution">{{measure.name}} <i
+                                                                class="fa fa-bar-chart"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <hr/>
+                                    <b>Files:</b>
+                                    <ul>
+                                        <li ng-repeat="file in sample.files">
+                                            <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
+                                            <img src="assets/img/splash/file_icon.png"
+                                                 style="height: 30px;padding-bottom: 10px;"> {{file.name}}
                                         </li>
                                     </ul>
                                 </div>
@@ -91,19 +123,19 @@
                                 <a ng-click="openDetails(attachment)" class="link pointer"
                                    style="padding-left: 15px;">{{attachment.name}}</a>
 
-                                <div class="row">
-                                    <div class="col-xs-offset-2">
-                                        <ul>
-                                            <li ng-repeat="link in attachment.links">
-                                                <img src="assets/img/splash/sample_icon.png"
-                                                     style="height: 40px;padding-bottom: 10px;"> {{link.name}}
-                                                <i ng-click="removeLink(link, 'input_files', attachment)"
-                                                   class="fa fa-fw fa-close pull-right pointer"></i>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                <!--<div class="row">-->
+                                    <!--<div class="col-xs-offset-2">-->
+                                        <!--<ul>-->
+                                            <!--<li ng-repeat="link in attachment.links">-->
+                                                <!--<img src="assets/img/splash/sample_icon.png"-->
+                                                     <!--style="height: 40px;padding-bottom: 10px;"> {{link.name}}-->
+                                                <!--<i ng-click="removeLink(link, 'input_files', attachment)"-->
+                                                   <!--class="fa fa-fw fa-close pull-right pointer"></i>-->
+                                            <!--</li>-->
+                                        <!--</ul>-->
+                                    <!--</div>-->
 
-                                </div>
+                                <!--</div>-->
                             </div>
                         </div>
                         <div class="row" ng-repeat="attachment in template.output_files">
@@ -114,19 +146,19 @@
                                 <a ng-click="openDetails(attachment)" class="link pointer"
                                    style="padding-left: 15px;">{{attachment.name}}</a>
 
-                                <div class="row">
-                                    <div class="col-xs-offset-2">
-                                        <ul>
-                                            <li ng-repeat="link in attachment.links">
-                                                <img src="assets/img/splash/sample_icon.png"
-                                                     style="height: 40px;padding-bottom: 10px;"> {{link.name}}
-                                                <i ng-click="removeLink(link, 'output_files', attachment)"
-                                                   class="fa fa-fw fa-close pull-right pointer"></i>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                <!--<div class="row">-->
+                                    <!--<div class="col-xs-offset-2">-->
+                                        <!--<ul>-->
+                                            <!--<li ng-repeat="link in attachment.links">-->
+                                                <!--<img src="assets/img/splash/sample_icon.png"-->
+                                                     <!--style="height: 40px;padding-bottom: 10px;"> {{link.name}}-->
+                                                <!--<i ng-click="removeLink(link, 'output_files', attachment)"-->
+                                                   <!--class="fa fa-fw fa-close pull-right pointer"></i>-->
+                                            <!--</li>-->
+                                        <!--</ul>-->
+                                    <!--</div>-->
 
-                                </div>
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
@@ -179,10 +211,15 @@
                                          style="height: 40px;padding-bottom: 10px;">
                                     <a ng-click="openDetails(attachment)" class="link pointer"
                                        style="padding-left: 15px;">{{attachment.name}}</a>
-                                    <span style="padding-left: 20px">
+                                    <span ng-if="!template.does_transform" style="padding-left: 20px">
                                         <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span
                                             style="color:#3a9ee3"><a
                                             ng-click="addMeasurement(attachment)">Measurement</a></span>
+                                    </span>
+                                     <span ng-if="template.does_transform" style="padding-left: 20px">
+                                        <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span
+                                             style="color:#3a9ee3"><a
+                                             ng-click="transformation(attachment)">Transformation</a></span>
                                     </span>
                                     <i ng-click="removeAttachment(attachment, 'samples')"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
@@ -225,7 +262,7 @@
                                                 ng-model="bk.selectedSample"
                                                 data-placeholder="Choose Sample"
                                                 class="form-control"
-                                                ng-options="sample.name for sample in template.samples">
+                                                ng-options="sample.name for sample in template.input_samples">
 
                                         </select>
                                     </div>
@@ -260,7 +297,7 @@
                                                 ng-model="bk.selectedSample"
                                                 data-placeholder="Choose Sample"
                                                 class="form-control"
-                                                ng-options="sample.name for sample in template.samples">
+                                                ng-options="sample.name for sample in template.input_samples">
 
                                         </select>
                                     </div>
