--- a/website/app/index.html
+++ b/website/app/index.html
@@ -327,6 +327,8 @@
 <script src="application/processes/measurements.js"></script>
 <script src="application/processes/measurements.service.js"></script>
 <script src="application/core/components/properties/properties.js"></script>
+<script src="application/services/project-task-bar-state-service.js"></script>
+<script src="application/core/projects/project/processes/transformation-controller.js"></script>
 <!-- endbuild -->
 </body>
 </html>
