updates to the backend queries

--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -11,7 +11,7 @@
     <div class="modal-body">
         <div class="row">
             <div class="col-xs-4">
-                <div class="details-sidebar" style="margin-bottom: ">
+                <div class="details-sidebar">
                     <ul class="list-group">
                         <li ng-class="{'active': template === chosenProperty}" ng-click="showDetails(template)"
                             ng-repeat="template in templates | filter:search"
