--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row" style="margin-top: 20px;">
             <div class="col-xs-4">
-                <div class="details-sidebar">
+                <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
                     <div class="row">
                         <div style="text-align: center;margin-top: 20px;">
                             <button ui-sref="projects.project.samples.create"
