--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -1,8 +1,7 @@
-
 <div>
     <div class="row" style="margin-top: 20px;">
         <div class="col-xs-4">
-            <div class="details-sidebar">
+            <div class="details-sidebar" style="margin-bottom: -900px;padding-bottom: 900px;">
                 <div class="row">
                     <div class="col-xs-12" style="margin-top: 10px;">
                         <div class="pull-right"><a ui-sref="projects.project.processes.list"> <i
@@ -35,9 +34,10 @@
                     <div class="col-xs-12">
                         <b>Set Up</b>
                         <ul>
-                            <li ng-repeat="setting in template.setup.settings[0].properties" ng-if="setting.property.value">
+                            <li ng-repeat="setting in template.setup.settings[0].properties"
+                                ng-if="setting.property.value">
                                 <i>{{setting.property.name}}</i> ::
-                                    {{setting.property.value}} {{setting.property.unit}}
+                                {{setting.property.value}} {{setting.property.unit}}
 
                             </li>
                         </ul>
