--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -1,6 +1,6 @@
 <div class="row" style="margin-top: 20px;">
     <div class="col-xs-4">
-        <div class="details-sidebar">
+        <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
             <div class="row">
                 <div style="text-align: center; margin-top: 20px;">
                     <button ng-click="chooseTemplate()" class="btn-details-container btn-process btn btn-default"> create</button>
