as received process

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -4,7 +4,8 @@
             <div class="details-sidebar">
                 <div class="row">
                     <div class="col-xs-12" style="margin-top: 10px;">
-                        <div class="pull-right"><a ui-sref="projects.project.processes.list"> <i class="fa fa-fw fa-backward"></i> Back to processes list</a></div>
+                        <div class="pull-right"><a ui-sref="projects.project.processes.list"> <i
+                                class="fa fa-fw fa-backward"></i> Back to processes list</a></div>
                         <h4 class="text-center process">{{template.name}}</h4>
                     </div>
                 </div>
@@ -29,7 +30,7 @@
                 </div>
                 <hr class="divider"/>
 
-                <div class="row">
+                <div ng-if="template._type !== 'as_received'" class="row">
                     <div class="col-xs-12">
                         <b>Set Up</b>
                         <ul>
@@ -39,8 +40,9 @@
                         </ul>
                     </div>
                 </div>
-                <hr class="divider"/>
-                <div class="row">
+                <div ng-if="template._type !== 'as_received'" class="row">
+                    <hr class="divider"/>
+
                     <div class="col-xs-8">
                         <b>Samples</b>
 
@@ -63,12 +65,13 @@
                                                         <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
                                                     </div>
                                                     <div ng-switch-when="string">
-                                                       <span style="padding-left: 30px;"> {{measure.value}}</span>
+                                                        <span style="padding-left: 30px;"> {{measure.value}}</span>
                                                     </div>
                                                     <div ng-switch-when="histogram">
                                                         <a href="" popover="Graph displayed here...."
-                                                           popover-title="Particle size distribution">{{measure.name}} <i
-                                                                class="fa fa-bar-chart"></i>
+                                                           popover-title="Particle size distribution">{{measure.name}}
+                                                            <i
+                                                                    class="fa fa-bar-chart"></i>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -88,8 +91,9 @@
                                                     </div>
                                                     <div ng-switch-when="histogram">
                                                         <a href="" popover="Graph displayed here...."
-                                                           popover-title="Particle size distribution">{{measure.name}} <i
-                                                                class="fa fa-bar-chart"></i>
+                                                           popover-title="Particle size distribution">{{measure.name}}
+                                                            <i
+                                                                    class="fa fa-bar-chart"></i>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -110,11 +114,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="row" ng-if="template._type === 'as_received'">
+                    <b>New Sample</b>
+
+                    <div style="padding-left: 20px;" class="col-xs-8">
+
+                        <div ng-if="bk.newSample.name">Name: {{bk.newSample.name}}</div>
+                        <div ng-if="bk.newSample.description">Description: {{bk.newSample.description}}</div>
+                    </div>
+                </div>
                 <hr class="divider"/>
                 <div class="row">
                     <div class="col-xs-8">
                         <b>Files</b>
-
                         <div class="row" ng-repeat="attachment in template.input_files">
                             <div ng-if="attachment.type === 'datafile'">
                                 <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
@@ -123,19 +135,6 @@
                                 <a ng-click="openDetails(attachment)" class="link pointer"
                                    style="padding-left: 15px;">{{attachment.name}}</a>
 
-                                <!--<div class="row">-->
-                                    <!--<div class="col-xs-offset-2">-->
-                                        <!--<ul>-->
-                                            <!--<li ng-repeat="link in attachment.links">-->
-                                                <!--<img src="assets/img/splash/sample_icon.png"-->
-                                                     <!--style="height: 40px;padding-bottom: 10px;"> {{link.name}}-->
-                                                <!--<i ng-click="removeLink(link, 'input_files', attachment)"-->
-                                                   <!--class="fa fa-fw fa-close pull-right pointer"></i>-->
-                                            <!--</li>-->
-                                        <!--</ul>-->
-                                    <!--</div>-->
-
-                                <!--</div>-->
                             </div>
                         </div>
                         <div class="row" ng-repeat="attachment in template.output_files">
@@ -145,20 +144,6 @@
                                      style="height: 40px;padding-bottom: 10px;">
                                 <a ng-click="openDetails(attachment)" class="link pointer"
                                    style="padding-left: 15px;">{{attachment.name}}</a>
-
-                                <!--<div class="row">-->
-                                    <!--<div class="col-xs-offset-2">-->
-                                        <!--<ul>-->
-                                            <!--<li ng-repeat="link in attachment.links">-->
-                                                <!--<img src="assets/img/splash/sample_icon.png"-->
-                                                     <!--style="height: 40px;padding-bottom: 10px;"> {{link.name}}-->
-                                                <!--<i ng-click="removeLink(link, 'output_files', attachment)"-->
-                                                   <!--class="fa fa-fw fa-close pull-right pointer"></i>-->
-                                            <!--</li>-->
-                                        <!--</ul>-->
-                                    <!--</div>-->
-
-                                <!--</div>-->
                             </div>
                         </div>
                     </div>
@@ -171,7 +156,7 @@
                 <div class="col-xs-8">
                     Name your process
                     <div class="row">
-                        <input ng-model="template.name" class="form-control" style="width: 200px;" >
+                        <input ng-model="template.name" class="form-control" style="width: 200px;">
                     </div>
                     <br>
                     How would you describe your process?
@@ -187,13 +172,13 @@
                     </div>
                     <br>
 
-                    <div class="row">
+                    <div ng-if="template._type !== 'as_received'" class="row">
                         <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a
                             ng-click="setUp()">Setup</a></span>
                     </div>
                     <br>
                     <hr class="divider"/>
-                    <div class="row">
+                    <div ng-if="template._type !== 'as_received'" class="row">
                         <div class="col-xs-12 process headings">Samples</div>
                         <div class="row" style="padding: 15px;">
                             <br>
@@ -228,6 +213,25 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row" ng-if="template._type === 'as_received'">
+                        <div class="process headings">Create Sample</div>
+                        <br>
+
+                        <div class="col-xs-8">
+                            Name your sample
+                            <div class="row">
+                                <input ng-model="bk.newSample.name" class="form-control" style="width: 200px;">
+                            </div>
+                            <br>
+                            How would you describe your sample?
+                            <div class="row">
+                                <textarea placeholder="describe your sample" ng-model="bk.newSample.description"
+                                          class="form-control col-xs-8">
+                                </textarea>
+                            </div>
+                            <br>
+                        </div>
+                    </div>
                     <hr class="divider"/>
                     <div class="row">
                         <div class="col-xs-12 process headings">Files</div>
@@ -246,8 +250,10 @@
                                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                     <img src="assets/img/splash/file_icon.png"
                                          style="height: 40px;padding-bottom: 10px;">
-                                    <a ng-click="openDetails(attachment)" class="link pointer">{{attachment.name}}</a>
-                                    <i style="padding-left: 20px;" ng-click="removeAttachment(attachment, 'input_files')"
+                                    <a ng-click="openDetails(attachment)"
+                                       class="link pointer">{{attachment.name}}</a>
+                                    <i style="padding-left: 20px;"
+                                       ng-click="removeAttachment(attachment, 'input_files')"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
 
                                     <span style="padding-left: 20px">
@@ -263,7 +269,6 @@
                                                 data-placeholder="Choose Sample"
                                                 class="form-control"
                                                 ng-options="sample.name for sample in template.input_samples">
-
                                         </select>
                                     </div>
                                 </div>
@@ -281,9 +286,11 @@
                                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                     <img src="assets/img/splash/file_icon.png"
                                          style="height: 40px;padding-bottom: 10px;">
-                                    <a ng-click="openDetails(attachment)" class="link pointer">{{attachment.name}}</a>
+                                    <a ng-click="openDetails(attachment)"
+                                       class="link pointer">{{attachment.name}}</a>
 
-                                    <i style="padding-left: 20px;" ng-click="removeAttachment(attachment, 'output_files')"
+                                    <i style="padding-left: 20px;"
+                                       ng-click="removeAttachment(attachment, 'output_files')"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
                                     <span style="padding-left: 20px">
                                       <i class="fa fa-link fa-fw sample"></i>
@@ -312,7 +319,8 @@
                         <br>
 
                         <div class="col-xs-3">
-                            <button ng-click="cancel()" class="btn-details-container btn btn-default btn btn-cancel">
+                            <button ng-click="cancel()"
+                                    class="btn-details-container btn btn-default btn btn-cancel">
                                 Cancel
                             </button>
                         </div>
