--- a/website/app/index.html
+++ b/website/app/index.html
@@ -329,6 +329,8 @@
 <script src="application/core/components/properties/properties.js"></script>
 <script src="application/services/project-task-bar-state-service.js"></script>
 <script src="application/core/projects/project/processes/transformation-controller.js"></script>
+<script src="application/core/projects/project/processes/create-process-directive.js"></script>
+<script src="application/core/projects/project/processes/as-received-directive.js"></script>
 <!-- endbuild -->
 </body>
 </html>
